--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                             EMAIL</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i
                                 class="bi bi-linkedin"></i> LINKEDIN</button></a>
-                    <button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button> <a
-                        href="https://www.behance.net/ateneasantos" target="_blank"></a>
+                                <a
+                                href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button> </a>
                 </div>
               
             </div>
