--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="row" style="padding-top:10vh;">
             <div class="col-sm-1 col-md-2 col-lg-3 col-xl-4"></div>
             <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
-                <p>
-                    I am <span class="linetype">Atenea Santos</span>
+                <p id="title">
+                    I am </br><span class="linetype">Atenea Santos</span>
                 </p>
                 <p>
                     A product designer with a background in marketing. My experience working both in my own projects and
