--- a/index.html
+++ b/index.html
@@ -24,35 +24,19 @@
         <div class="row" style="padding-top:2vh;">
             <div class="col-sm-1 col-md-2 col-lg-3 col-xl-4"></div>
             <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
-                <p id="title">
-                    I am </br><span class="linetype">Atenea Santos</span>
-                </p>
+                <p class="title">Atenea Santos 🧚🏻‍♀️</p>
                 <p>
                     A product designer with a background in marketing. My experience working both in my own projects and
                     integrated in another teams have brought me an entire vision of how to take a project and make it
                     work.
                     Currently, I am looking for projects that allows me to grow in the professional designer path.
                 </p>
-                <p>
-                    See my work or contact me:
-                </p>
            
-            <div class="buttons row">
-                <div class="col-12 d-flex justify-content-center">
-                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i
-                                class="bi bi-envelope-at-fill"></i>
-                            EMAIL</button></a>
-                    <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i
-                                class="bi bi-linkedin"></i> LINKEDIN</button></a>
-                                <a
-                                href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button> </a>
-                </div>
-                
-            </div>
-            <div class="row">
-            <div class="col-12" style="padding:10px">
-                <a href="./cv/ateneasantos-cv.pdf"><p class="resume">Or download my resume.</p></a>
-            </div>
+            <div class="buttons-row">
+                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i class="bi bi-envelope-at-fill"></i>EMAIL</button></a>
+                    <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i class="bi bi-linkedin"></i> LINKEDIN</button></a>
+                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button> </a>
+                    <a href="./cv/ateneasantos-cv.pdf"><p class="resume">Download my resume</p></a>
             </div>
         </div>
         </div>
@@ -61,8 +45,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="./functions.js"></script>
 </body>
 
