--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
         <canvas id="waves"></canvas>
     </div>
     <div class="container">
-        <div class="row" style="padding-top:2vh;">
-            <div class="col-sm-1 col-md-2 col-lg-3 col-xl-4"></div>
-            <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
                 <p class="title">Atenea Santos 🧚🏻‍♀️</p>
                 <p>
                     A product designer with a background in marketing. My experience working both in my own projects and
@@ -33,13 +30,11 @@
                 </p>
            
             <div class="buttons-row">
-                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i class="bi bi-envelope-at-fill"></i>EMAIL</button></a>
+                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i class="bi bi-envelope-at-fill"></i> EMAIL</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i class="bi bi-linkedin"></i> LINKEDIN</button></a>
-                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button> </a>
-                    <a href="./cv/ateneasantos-cv.pdf"><p class="resume">Download my resume</p></a>
+                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button></a>
+                    <a href="./cv/ateneasantos-cv.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> DOWNLOAD MY RESUME</button></a>
             </div>
-        </div>
-        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
