--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="wave" class="container">
         <canvas id="waves"></canvas>
     </div>
-    <div class="container text-justify">
-        <div class="row">
+    <div class="container min-vh-100 d-flex">
+        <div class="row justify-content-center align-self-center">
             <div class="col-sm-8 md-8 lg-4 xl-4">
                 <h1 class="title">I am Atenea Santos 👋🏻</h1>
                 <p>
