--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
 </head>
 
 <body>
-    <div id="wave" class="container">
-        <canvas id="waves"></canvas>
-    </div>
-    <div class="container min-vh-100 d-flex">
+ 
+    <div class="container vh-100 d-flex">
+        <div id="wave" class="row">
+            <div class="col-12">
+                <div >
+                    <canvas id="waves"></canvas>
+                </div>
+            </div>
+        </div>
         <div class="row justify-content-center align-self-center">
             <div class="col-sm-8 md-8 lg-4 xl-4">
                 <h1 class="title">I am Atenea Santos 👋🏻</h1>
@@ -43,7 +48,9 @@
                     <a href="./cv/ateneasantos-cv.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> DOWNLOAD MY RESUME</button></a>
                 </div>  
             </div>
+        </div>
         </div>  
+         
     </div>
 
  <!--Bootstrap-->
