more more changes

--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
 
 <body>
  
-    <div class="container vh-100 d-flex">
+    <div class="container vh-100 d-flex align-self-end">
         <div id="wave" class="row">
             <div class="col-12">
-                <div >
-                    <canvas id="waves"></canvas>
-                </div>
+                 <canvas id="waves"></canvas>
             </div>
         </div>
         <div class="row justify-content-center align-self-center">
