--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
             </div>
         </div>
         <div class="row justify-content-center align-self-center">
-            <div class="col-sm-8 md-8 lg-4 xl-4">
-                <h1 class="title">I am Atenea Santos 👋🏻</h1>
+            <div class="col-xs-12 col-sm-6">
+                <img class="img-fluid" src="./favicon_io/android-chrome-512x512.png">
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <div id="content-box">
+                <h1 class="title">I am Atenea Santos</h1>
                 <p>
                     A product designer with a background in marketing. My experience working both in my own projects and
                     integrated in another teams have brought me an entire vision of how to take a project and make it
@@ -43,8 +47,9 @@
                     <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i class="bi bi-envelope-at-fill"></i> EMAIL</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i class="bi bi-linkedin"></i> LINKEDIN</button></a>
                     <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button></a>
-                    <a href="./cv/ateneasantos-cv.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> DOWNLOAD MY RESUME</button></a>
+                    <a href="./cv/ateneasantos-cv.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> GET RESUME</button></a>
                 </div>  
+            </div>
             </div>
         </div>
         </div>  
