more more more changes

--- a/index.html
+++ b/index.html
@@ -26,18 +26,14 @@
 <body>
  
     <div class="container vh-100 d-flex align-self-end">
-        <div id="wave" class="row">
-            <div class="col-12">
-                 <canvas id="waves"></canvas>
-            </div>
-        </div>
         <div class="row justify-content-center align-self-center">
             <div class="col-xs-12 col-sm-6">
                 <img class="img-fluid" src="./favicon_io/android-chrome-512x512.png">
             </div>
             <div class="col-xs-12 col-sm-6">
                 <div id="content-box">
-                <h1 class="title">I am Atenea Santos</h1>
+                <p class="m-0 p-0">I am </p>
+                <h1><span class="title">Atenea Santos</span></h1>
                 <p>
                     A product designer with a background in marketing. My experience working both in my own projects and
                     integrated in another teams have brought me an entire vision of how to take a project and make it
