--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i class="bi bi-envelope-at-fill"></i> EMAIL</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i class="bi bi-linkedin"></i> LINKEDIN</button></a>
                     <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button></a>
-                    <a href="./cv/ateneasantos-cv.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> GET RESUME</button></a>
+                    <a href="./cv/ateneasantos-designer.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> GET RESUME</button></a>
                 </div>  
             </div>
             </div>
