Web made by myself

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atenea Santos | Product designer</title>
+    <title>Atenea | Designer</title>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -19,8 +19,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
-    
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,22 +30,21 @@
     <div class="container vh-100 d-flex align-self-end">
         <div class="row justify-content-center align-self-center">
             <div class="col-xs-12 col-sm-6">
-                <img class="img-fluid" src="./favicon_io/android-chrome-512x512.png">
-            </div>
-            <div class="col-xs-12 col-sm-6">
                 <div id="content-box">
-                <p class="m-0 p-0">I am </p>
-                <h1><span class="title">Atenea Santos</span></h1>
+                <img class="img" src="./img/image1.jpg" alt="ateneas">
+                <h1><span class="title">ATENEA SANTOS</span></h1>
+                <p><span class="subtitle">UX/UI DESIGNER</span></p>
                 <p>
-                    A product designer with a background in marketing. My experience working both in my own projects and
-                    integrated in another teams have brought me an entire vision of how to take a project and make it
-                    work. Currently, I am looking for projects that allows me to grow in the professional designer path.
+                    Hi! 👋🏻 I'm a passionate about designing and developing user interfaces and digital products, which comes from digital marketing.</p>
+                <p>
+                    I have worked on my own projects and other people’s projects and this allows me to have a very complete vision of how to approach a project, from its beginnings to make it work.
+                </p>
                 </p>
                 <div class="buttons">
-                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"><i class="bi bi-envelope-at-fill"></i> EMAIL</button></a>
-                    <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"><i class="bi bi-linkedin"></i> LINKEDIN</button></a>
-                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"><i class="bi bi-behance"></i> BEHANCE</button></a>
-                    <a href="./cv/ateneasantos-designer.pdf"><button id="boton-cv"><i class="bi bi-file-earmark-person"></i> GET RESUME</button></a>
+                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>💌 EMAIL ME</button></a>
+                    <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"></i>👩🏼‍💻 LINKEDIN</button></a>
+                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"></i>💙 BEHANCE</button></a>
+                    <a href="./cv/ateneasantos-designer.pdf"><button id="boton-cv"></i>✍🏻 GET RESUME</button></a>
                 </div>  
             </div>
             </div>
