--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atenea | Designer</title>
+    <title>Atenea | Product Designer</title>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -31,20 +31,23 @@
         <div class="row justify-content-center align-self-center">
             <div class="col-xs-12 col-sm-6">
                 <div id="content-box">
-                <img class="img" src="./img/image1.jpg" alt="ateneas">
+                <img class="img" src="./img/image1.jpg" alt="ateneasantos">
                 <h1><span class="title">ATENEA SANTOS</span></h1>
-                <p><span class="subtitle">UX/UI DESIGNER</span></p>
+                <p><span class="subtitle">PRODUCT DESIGNER</span></p>
                 <p>
-                    Hi! 👋🏻 I'm a passionate about designing and developing user interfaces and digital products, which comes from digital marketing.</p>
-                <p>
-                    I have worked on my own projects and other people’s projects and this allows me to have a very complete vision of how to approach a project, from its beginnings to make it work.
-                </p>
+                    Hi! 👋🏻 I started in the digital world with marketing and this led me to discover my true passion: design as a tool to solve problems and create business opportunities. I am passionate about the digital world and innovative user-centric solutions. 
+
+                    I have experience in project development, digital marketing, content creation and user care and support, all this experience has made me develop a complete vision of how to develop a product.
+                    
+                    I have worked on my own projects and other people’s projects, which has allowed me to build a complete vision of how to approach a project and create a multidisciplinary profile, this is why my ideas and my vision can be handy since I know what is important for a product to work.
+                    
+                    My experience in both working and co-founding projects has made me develop skills such as teamwork and constant adaptation to changes. I’m the mix of visual design, user experience, digital marketing and a touch of entrepreneurship.
                 </p>
                 <div class="buttons">
                     <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>💌 EMAIL ME</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"></i>👩🏼‍💻 LINKEDIN</button></a>
                     <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"></i>💙 BEHANCE</button></a>
-                    <a href="./cv/AteneaSantos-designer-resume.pdf"><button id="boton-cv"></i>✍🏻 GET RESUME</button></a>
+                    <a href="./cv/AteneaSantos-ProductDesigner-resume"><button id="boton-cv"></i>✍🏻 GET RESUME</button></a>
                 </div>  
             </div>
             </div>
