--- a/index.html
+++ b/index.html
@@ -35,19 +35,16 @@
                 <h1><span class="title">ATENEA SANTOS</span></h1>
                 <p><span class="subtitle">PRODUCT DESIGNER</span></p>
                 <p>
-                    Hi! 👋🏻 I started in the digital world with marketing and this led me to discover my true passion: design as a tool to solve problems and create business opportunities. I am passionate about the digital world and innovative user-centric solutions. 
-
-                    I have experience in project development, digital marketing, content creation and user care and support, all this experience has made me develop a complete vision of how to develop a product.
-                    
-                    I have worked on my own projects and other people’s projects, which has allowed me to build a complete vision of how to approach a project and create a multidisciplinary profile, this is why my ideas and my vision can be handy since I know what is important for a product to work.
-                    
+                    Hi! 👋🏻  I'm Atenea a digital product designer with a background in project development, digital marketing, content creation and user care, all this experience has made me build a complete vision of how to approach a product.
+                </p>
+                <p>
                     My experience in both working and co-founding projects has made me develop skills such as teamwork and constant adaptation to changes. I’m the mix of visual design, user experience, digital marketing and a touch of entrepreneurship.
                 </p>
                 <div class="buttons">
                     <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>💌 EMAIL ME</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"></i>👩🏼‍💻 LINKEDIN</button></a>
                     <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"></i>💙 BEHANCE</button></a>
-                    <a href="./cv/AteneaSantos-ProductDesigner-resume"><button id="boton-cv"></i>✍🏻 GET RESUME</button></a>
+                    <a href="./cv/AteneaSantos-ProductDesigner-resume.pdf"><button id="boton-cv"></i>✍🏻 GET RESUME</button></a>
                 </div>  
             </div>
             </div>
