--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atenea | Product Designer</title>
+    <title>Atenea Santos | Product Designer</title>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -32,19 +32,16 @@
             <div class="col-xs-12 col-sm-6">
                 <div id="content-box">
                 <img class="img" src="./img/image1.jpg" alt="ateneasantos">
-                <h1><span class="title">ATENEA SANTOS</span></h1>
-                <p><span class="subtitle">PRODUCT DESIGNER</span></p>
-                <p>
-                    Hi! 👋🏻  I'm Atenea a digital product designer with a background in project development, digital marketing, content creation and user care, all this experience has made me build a complete vision of how to approach a product.
-                </p>
-                <p>
-                    My experience in both working and co-founding projects has made me develop skills such as teamwork and constant adaptation to changes. I’m the mix of visual design, user experience, digital marketing and a touch of entrepreneurship.
-                </p>
+                <h1><span class="title">I'm Atenea Santos <br> Product Designer
+                </span></h1>
+                <p><span class="description">
+                    A designer with a strong focus on startups. I have developed my career both being part of the founding team or scaling the product from the early stages to delivering successful digital products.
+                </span></p>
                 <div class="buttons">
-                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>💌 EMAIL ME</button></a>
-                    <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"></i>👩🏼‍💻 LINKEDIN</button></a>
-                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"></i>💙 BEHANCE</button></a>
-                    <a href="./cv/AteneaSantos-ProductDesigner-resume.pdf"><button id="boton-cv"></i>✍🏻 GET RESUME</button></a>
+                    <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>Contact me</button></a>
+                    <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"></i>LinkedIn</button></a>
+                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"></i>My portfolio</button></a>
+                    <a href="./cv/AteneaSantos-ProductDesigner-resume.pdf"><button id="boton-cv"></i>Get my resume</button></a>
                 </div>  
             </div>
             </div>
@@ -59,7 +56,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     
-    <!--Custom JS-->
-    <script src="./functions.js"></script>
 </body>
 </html>
