--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="buttons">
                     <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>Contact me</button></a>
                     <a href="https://www.linkedin.com/in/ateneasantos/" target="_blank"><button id="boton-linkedin"></i>LinkedIn</button></a>
-                    <a href="https://www.behance.net/ateneasantos" target="_blank"><button id="boton-behance"></i>My portfolio</button></a>
+                    <a href="https://ateneasantos.notion.site/Hi-I-m-Atenea-172689a2918080a4b052fc48998a1460" target="_blank"><button id="boton-behance"></i>My portfolio</button></a>
                     <a href="./cv/AteneaSantos-ProductDesigner-resume.pdf"><button id="boton-cv"></i>Get my resume</button></a>
                 </div>  
             </div>
