--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <link rel="stylesheet" href="./style.css" />
 
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <!--<link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">-->
+    <link rel="icon" type="image/png" href="./favicon_io/Favicon16x16.png">
+    <link rel="icon" type="image/png" href="./favicon_io/Favicon32x32.png">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;500&display=swap" rel="stylesheet">-->
 </head>
 
 <body>
@@ -32,10 +34,11 @@
             <div class="col-xs-12 col-sm-6">
                 <div id="content-box">
                 <img class="img" src="./img/image1.jpg" alt="ateneasantos">
-                <h1><span class="title">I'm Atenea Santos <br> Product Designer
+                <h1><span class="title">Atenea Santos, Product Designer
                 </span></h1>
                 <p><span class="description">
-                    A designer with a strong focus on startups. I have developed my career both being part of the founding team or scaling the product from the early stages to delivering successful digital products.
+                    <p>Results-driven Product Designer with 3+ years of experience in UX/UI design, digital strategy, and product development across startups, B2B/B2C platforms, and freelance consulting.</p>
+                        <p>Skilled in leading end-to-end design, user research, and creating intuitive digital experiences. Adept at collaborating with teams and stakeholders to define vision, requirements, and scalable design systems. Passionate about building user-centric products that drive business growth.</p>
                 </span></p>
                 <div class="buttons">
                     <a href="mailto: hola@ateneasantos.com"><button id="boton-email"></i>Contact me</button></a>
